[gd_scene load_steps=31 format=3 uid="uid://cjjl1y3eyfvk0"]

[ext_resource type="Texture2D" uid="uid://5h8nrph4ngi" path="res://Assets/images/ButtonText_Small_Orange_Round.png" id="1_4r8hx"]
[ext_resource type="Script" uid="uid://dxdximcf148u3" path="res://Script/mean_menu.gd" id="1_ouvks"]
[ext_resource type="PackedScene" path="res://Scene/coin_bar.tscn" id="2_38suq"]
[ext_resource type="Texture2D" uid="uid://cphm1hgf5v8sy" path="res://Assets/Atlas/SETTINGS.PNG" id="2_72c26"]
[ext_resource type="FontFile" uid="uid://c6reqbpdnikfh" path="res://Assets/Fonts/Pixel Game.otf" id="3_4kkba"]
[ext_resource type="PackedScene" path="res://Scene/key_bar.tscn" id="3_tspsl"]
[ext_resource type="Texture2D" uid="uid://ccgmgnyead0j4" path="res://Assets/Atlas/USER.PNG" id="5_cchtj"]
[ext_resource type="Texture2D" uid="uid://d0nm3e7dp26lk" path="res://Assets/images/IconButton_Small_Orange_Circle.png" id="5_jyqvl"]
[ext_resource type="Texture2D" uid="uid://c8ijr5kxyw5rx" path="res://Assets/Atlas/ADS.PNG" id="6_tspsl"]
[ext_resource type="Texture2D" uid="uid://cnl4l5nqxwu82" path="res://Assets/Atlas/BUTTON1.PNG" id="8_h7ltx"]
[ext_resource type="Texture2D" uid="uid://bk2c6toaosrwe" path="res://Assets/images/Icon_Large_Audio_Blank.png" id="8_r2ala"]
[ext_resource type="Texture2D" uid="uid://dll6h03canqdx" path="res://Assets/images/Icon_Large_AudioOff_Blank.png" id="9_fimx3"]
[ext_resource type="Texture2D" uid="uid://42ft4c2ys05q" path="res://Assets/Atlas/BUTTON2.PNG" id="9_jyqvl"]
[ext_resource type="Texture2D" uid="uid://cnhg577r7vuva" path="res://Assets/Atlas/BUTTON3.PNG" id="10_oj5b4"]
[ext_resource type="Texture2D" uid="uid://dokgok4jkc46g" path="res://Assets/images/vibrate.png" id="10_r5ce3"]
[ext_resource type="Script" uid="uid://bodiw4q4orjfi" path="res://Script/settings.gd" id="10_vvd8s"]
[ext_resource type="Script" uid="uid://bxa80vkwf88f1" path="res://Script/ad_shaking.gd" id="11_h7ltx"]
[ext_resource type="Texture2D" uid="uid://bu4bkevapay6v" path="res://Assets/images/vibrate_cancel.PNG" id="11_oaj43"]
[ext_resource type="Texture2D" uid="uid://dx6xav8xbxxun" path="res://Assets/Atlas/BUTTON4.PNG" id="11_vvd8s"]
[ext_resource type="Texture2D" uid="uid://d27x8dqm3d6kb" path="res://Assets/images/jetpack_small.png" id="13_fimx3"]
[ext_resource type="Shader" uid="uid://ihcaq5drhggn" path="res://shader/round_corner.gdshader" id="13_r5ce3"]
[ext_resource type="Texture2D" uid="uid://d0m7mopbpv5hl" path="res://Assets/images/jetpack_ninja_small.png" id="15_oaj43"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h7ltx"]
bg_color = Color(1, 1, 1, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5092862, 0.50928617, 0.5092862, 0.41568628)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4kkba"]
bg_color = Color(0.9843137, 0.4627451, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0.28627452, 0.28627452, 0.28627452, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fimx3"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0142752165, 0.014275218, 0.014275218, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0ccua"]
shader = ExtResource("13_r5ce3")
shader_parameter/radius = 0.1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cchtj"]
bg_color = Color(0.18039216, 0.18039216, 0.18039216, 0.627451)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tspsl"]
bg_color = Color(0.14928854, 0.3859377, 0.122504555, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0142752165, 0.014275218, 0.014275218, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r5ce3"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0142752165, 0.014275218, 0.014275218, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7fceh"]
shader = ExtResource("13_r5ce3")
shader_parameter/radius = 0.1

[node name="CanvasLayer" type="CanvasLayer"]
layer = 2

[node name="MeanMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ouvks")

[node name="VBoxContainer" type="VBoxContainer" parent="MeanMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer2" type="MarginContainer" parent="MeanMenu/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 45
theme_override_constants/margin_right = 40

[node name="HBoxContainer" type="HBoxContainer" parent="MeanMenu/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="CoinBar" parent="MeanMenu/VBoxContainer/MarginContainer2/HBoxContainer" instance=ExtResource("2_38suq")]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0

[node name="KeyBar" parent="MeanMenu/VBoxContainer/MarginContainer2/HBoxContainer" instance=ExtResource("3_tspsl")]
layout_mode = 2
size_flags_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MeanMenu/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MeanMenu/VBoxContainer/MarginContainer2/HBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9843137, 0.6627451, 0, 1)
theme_override_fonts/font = ExtResource("3_4kkba")
theme_override_font_sizes/font_size = 60
text = "X1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MeanMenu/VBoxContainer/MarginContainer2/HBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MeanMenu/VBoxContainer/MarginContainer2/HBoxContainer/HBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
texture = ExtResource("5_jyqvl")
expand_mode = 1

[node name="Panel" type="Panel" parent="MeanMenu/VBoxContainer/MarginContainer2/HBoxContainer/HBoxContainer/CenterContainer"]
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h7ltx")

[node name="Settings" type="MenuButton" parent="MeanMenu/VBoxContainer/MarginContainer2/HBoxContainer/HBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_vertical = 0
icon = ExtResource("2_72c26")
icon_alignment = 1
expand_icon = true
script = ExtResource("10_vvd8s")
audio_icon = ExtResource("8_r2ala")
audio_icon_off = ExtResource("9_fimx3")
vibrate_icon = ExtResource("10_r5ce3")
vibrate_icon_off = ExtResource("11_oaj43")
privacy_icon = ExtResource("5_cchtj")

[node name="MarginContainer3" type="MarginContainer" parent="MeanMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 40

[node name="VBoxContainer2" type="VBoxContainer" parent="MeanMenu/VBoxContainer/MarginContainer3"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer" type="HBoxContainer" parent="MeanMenu/VBoxContainer/MarginContainer3/VBoxContainer2"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MeanMenu/VBoxContainer/MarginContainer3/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 30

[node name="Panel" type="Panel" parent="MeanMenu/VBoxContainer/MarginContainer3/VBoxContainer2/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(400, 130)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4kkba")

[node name="HBoxContainer" type="HBoxContainer" parent="MeanMenu/VBoxContainer/MarginContainer3/VBoxContainer2/VBoxContainer/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MeanMenu/VBoxContainer/MarginContainer3/VBoxContainer2/VBoxContainer/MarginContainer/Panel/HBoxContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="Panel" type="Panel" parent="MeanMenu/VBoxContainer/MarginContainer3/VBoxContainer2/VBoxContainer/MarginContainer/Panel/HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_fimx3")

[node name="TextureRect" type="TextureRect" parent="MeanMenu/VBoxContainer/MarginContainer3/VBoxContainer2/VBoxContainer/MarginContainer/Panel/HBoxContainer/Panel"]
material = SubResource("ShaderMaterial_0ccua")
custom_minimum_size = Vector2(70, 70)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("13_fimx3")
expand_mode = 1

[node name="MarginContainer2" type="MarginContainer" parent="MeanMenu/VBoxContainer/MarginContainer3/VBoxContainer2/VBoxContainer/MarginContainer/Panel/HBoxContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MeanMenu/VBoxContainer/MarginContainer3/VBoxContainer2/VBoxContainer/MarginContainer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Panel" type="Panel" parent="MeanMenu/VBoxContainer/MarginContainer3/VBoxContainer2/VBoxContainer/MarginContainer/Panel/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cchtj")

[node name="Power1" type="Label" parent="MeanMenu/VBoxContainer/MarginContainer3/VBoxContainer2/VBoxContainer/MarginContainer/Panel/HBoxContainer/VBoxContainer/Panel"]
layout_mode = 0
offset_left = 37.0
offset_top = 4.0
offset_right = 113.0
offset_bottom = 56.0
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("3_4kkba")
theme_override_font_sizes/font_size = 50
text = "20"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label" type="Label" parent="MeanMenu/VBoxContainer/MarginContainer3/VBoxContainer2/VBoxContainer/MarginContainer/Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_4kkba")
theme_override_font_sizes/font_size = 40
text = "      JetpacK       "
vertical_alignment = 1

[node name="Power1Add" type="Button" parent="MeanMenu/VBoxContainer/MarginContainer3/VBoxContainer2/VBoxContainer/MarginContainer/Panel/HBoxContainer"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
flat = true

[node name="CenterContainer" type="CenterContainer" parent="MeanMenu/VBoxContainer/MarginContainer3/VBoxContainer2/VBoxContainer/MarginContainer/Panel/HBoxContainer/Power1Add"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -35.0
offset_right = 50.0
offset_bottom = 35.0
grow_horizontal = 0
grow_vertical = 2

[node name="Panel" type="Panel" parent="MeanMenu/VBoxContainer/MarginContainer3/VBoxContainer2/VBoxContainer/MarginContainer/Panel/HBoxContainer/Power1Add/CenterContainer"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_tspsl")

[node name="Label" type="Label" parent="MeanMenu/VBoxContainer/MarginContainer3/VBoxContainer2/VBoxContainer/MarginContainer/Panel/HBoxContainer/Power1Add/CenterContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 105
text = "+"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="VBoxContainer2" type="HBoxContainer" parent="MeanMenu/VBoxContainer/MarginContainer3/VBoxContainer2"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MeanMenu/VBoxContainer/MarginContainer3/VBoxContainer2/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 30

[node name="Panel" type="Panel" parent="MeanMenu/VBoxContainer/MarginContainer3/VBoxContainer2/VBoxContainer2/MarginContainer"]
custom_minimum_size = Vector2(400, 130)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4kkba")

[node name="HBoxContainer" type="HBoxContainer" parent="MeanMenu/VBoxContainer/MarginContainer3/VBoxContainer2/VBoxContainer2/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MeanMenu/VBoxContainer/MarginContainer3/VBoxContainer2/VBoxContainer2/MarginContainer/Panel/HBoxContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="Panel" type="Panel" parent="MeanMenu/VBoxContainer/MarginContainer3/VBoxContainer2/VBoxContainer2/MarginContainer/Panel/HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_r5ce3")

[node name="TextureRect" type="TextureRect" parent="MeanMenu/VBoxContainer/MarginContainer3/VBoxContainer2/VBoxContainer2/MarginContainer/Panel/HBoxContainer/Panel"]
material = SubResource("ShaderMaterial_7fceh")
custom_minimum_size = Vector2(70, 70)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("15_oaj43")
expand_mode = 1

[node name="MarginContainer2" type="MarginContainer" parent="MeanMenu/VBoxContainer/MarginContainer3/VBoxContainer2/VBoxContainer2/MarginContainer/Panel/HBoxContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MeanMenu/VBoxContainer/MarginContainer3/VBoxContainer2/VBoxContainer2/MarginContainer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Panel" type="Panel" parent="MeanMenu/VBoxContainer/MarginContainer3/VBoxContainer2/VBoxContainer2/MarginContainer/Panel/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cchtj")

[node name="Power2" type="Label" parent="MeanMenu/VBoxContainer/MarginContainer3/VBoxContainer2/VBoxContainer2/MarginContainer/Panel/HBoxContainer/VBoxContainer/Panel"]
layout_mode = 0
offset_left = 37.0
offset_top = 4.0
offset_right = 113.0
offset_bottom = 56.0
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("3_4kkba")
theme_override_font_sizes/font_size = 50
text = "2
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label" type="Label" parent="MeanMenu/VBoxContainer/MarginContainer3/VBoxContainer2/VBoxContainer2/MarginContainer/Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_4kkba")
theme_override_font_sizes/font_size = 40
text = "ninja Jetpack"
vertical_alignment = 1

[node name="Power2Add" type="Button" parent="MeanMenu/VBoxContainer/MarginContainer3/VBoxContainer2/VBoxContainer2/MarginContainer/Panel/HBoxContainer"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
flat = true

[node name="CenterContainer" type="CenterContainer" parent="MeanMenu/VBoxContainer/MarginContainer3/VBoxContainer2/VBoxContainer2/MarginContainer/Panel/HBoxContainer/Power2Add"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -35.0
offset_right = 50.0
offset_bottom = 35.0
grow_horizontal = 0
grow_vertical = 2

[node name="Panel" type="Panel" parent="MeanMenu/VBoxContainer/MarginContainer3/VBoxContainer2/VBoxContainer2/MarginContainer/Panel/HBoxContainer/Power2Add/CenterContainer"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_tspsl")

[node name="Label" type="Label" parent="MeanMenu/VBoxContainer/MarginContainer3/VBoxContainer2/VBoxContainer2/MarginContainer/Panel/HBoxContainer/Power2Add/CenterContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 105
text = "+"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MeanMenu/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 50

[node name="TextureButton" type="TextureButton" parent="MeanMenu/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("6_tspsl")
script = ExtResource("11_h7ltx")

[node name="VBoxContainer2" type="VBoxContainer" parent="MeanMenu"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -163.0
offset_bottom = -180.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="MeanMenu/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_bottom = 180

[node name="TextureButton" type="TextureButton" parent="MeanMenu/VBoxContainer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("1_4r8hx")

[node name="Label" type="Label" parent="MeanMenu/VBoxContainer2/MarginContainer/TextureButton"]
layout_mode = 0
offset_left = 267.0
offset_top = 56.0
offset_right = 268.0
offset_bottom = 193.0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 100
text = "Play"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MeanMenu/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 34
alignment = 1

[node name="Map" type="TextureButton" parent="MeanMenu/VBoxContainer2/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("8_h7ltx")

[node name="Skins" type="TextureButton" parent="MeanMenu/VBoxContainer2/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("9_jyqvl")

[node name="League" type="TextureButton" parent="MeanMenu/VBoxContainer2/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("10_oj5b4")

[node name="Shop" type="TextureButton" parent="MeanMenu/VBoxContainer2/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("11_vvd8s")

[connection signal="pressed" from="MeanMenu/VBoxContainer/MarginContainer3/VBoxContainer2/VBoxContainer/MarginContainer/Panel/HBoxContainer/Power1Add" to="MeanMenu" method="_on_power_1_add_pressed"]
[connection signal="pressed" from="MeanMenu/VBoxContainer/MarginContainer3/VBoxContainer2/VBoxContainer2/MarginContainer/Panel/HBoxContainer/Power2Add" to="MeanMenu" method="_on_power_2_add_pressed"]
[connection signal="pressed" from="MeanMenu/VBoxContainer2/MarginContainer/TextureButton" to="MeanMenu" method="_on_texture_button_pressed"]
[connection signal="pressed" from="MeanMenu/VBoxContainer2/HBoxContainer/Map" to="MeanMenu" method="_on_map_pressed"]
[connection signal="pressed" from="MeanMenu/VBoxContainer2/HBoxContainer/Skins" to="MeanMenu" method="_on_skins_pressed"]
[connection signal="pressed" from="MeanMenu/VBoxContainer2/HBoxContainer/Shop" to="MeanMenu" method="_on_shop_pressed"]
